corrected login and register buttons styling on mobile

--- a/public/views/loginRegisterStyle.css
+++ b/public/views/loginRegisterStyle.css
@@ -78,6 +78,7 @@ body {
     background-color: #0067D0;
     color: white;
     border: 1px solid black;
+    border-radius: 0px;
 }
 
 #loginBtn:hover, #registerBtn:hover {
